--- a/final_regression_paper2.Rmd
+++ b/final_regression_paper2.Rmd
@@ -465,7 +465,7 @@ g_reg2 <- out1 %>%
   #ggtitle("What does explain the behaviour of individuals?") #subtitle = "Robust estimation with standard errors HC1 (aka. Stata) and clustered around groups"
 
 
-# ggsave(g_reg2, filename = "fig3_regression_cooperation.png", device = "png", width = 6, height = 4, units = "in", dpi = 600 )
+ # ggsave(g_reg2, filename = "fig3_regression_cooperation.eps", device = "eps", width = 6, height = 4, units = "in", dpi = 600 )
 g_reg2
 
 # quartz(width = 6, height = 4, pointsize = 6)
